# ascii85_algorithm

./: .gitignore  CMakeLists.txt  README.md  coder.cpp  coder.h  encoded.a85  main.cpp  test.py
.github/workflows/: ci.yml
test/: main_test.cpp
